<resources>
    <string name="app_name">JSP y Servlet</string>
    <string name="title_jsp">JSP y Servlet</string>
    <string name="form_btn_mas_tarde">Mas Tarde</string>
    <string name="form_btn_ingresar">Ingresar</string>
    <string name="form_btn_crear_cuenta">Registrate</string>
    <string-array name="item_menu_principal">
        <item>Servlet</item>
        <item>JSP</item>
    </string-array>
    <string-array name="item_menu_secundario_servlet">
        <item>Video Introducción a Servlet</item>
        <item>¿Qué es Servlet?</item>
        <item>Caracteristicas de un Servlet</item>
        <item>Estructura Básica</item>
        <item>Ciclo de vida de un Servlet</item>
        <item>Software para ejecutar un Servlet</item>
        <item>Tipos de peticiones</item>
        <item>Datos enviados por el cliente</item>
        <item>Método del objeto cookie</item>
        

    </string-array>
    <string-array name="item_menu_secundario_jsp">
        <item>Video Introducción a JSP</item>
        <item>¿Qué es JSP?</item>
        <item>Ciclo de vida de una página JSP</item>
        <item>Objetos Implícitos</item>
        <item>Ámbitos de los atributos</item>
        <item>Lenguaje de expresión en JSP 2.0</item>
        <item>Comentarios</item>
        <item>Directrices</item>
        <item>Integracion Servlets y JSP</item>


    </string-array>
    <string-array name="item_menu_secundario_examen_final">
        <item>Examen Final</item>
    </string-array>
    <string name="login_valido">Alicia</string>
    <string name="clave_valida">1234</string>
    <string name="error_autenticar">Datos incorrectos</string>
    <string name="title_create_login_registro">Registro</string>
    <string name="datos_guardados_correctamente">"Datos guardados exitosamente "</string>
    <string name="btn_create_guardar">Guardar</string>
    <string name="btn_create_cancelar">Cancelar</string>
    <string name="title_login">Login</string>
    <string name="form_btn_recuperar">Recuperar contraseña</string>
    <string name="tab_servlet">Servlet</string>
    <string name="tab_jsp">JSP</string>
    <string name="contenido_servlet_q_es_servlet">
        Un servlet es un programa que se ejecuta en el contenedor Web de un servidor de aplicaciones.
        \n - Los clientes pueden invocarlo utilizando el protocolo HTTP.
        \n -Comparativamente, lo mismo que un applet es cargado y ejecutado por un explorador, un servlet
        es cargado y ejecutado por un contenedor Web.
    </string>
    <string name="caracteristicas_servlets">
         En definitiva, si comparamos los servlets con la tecnologia CGI o con otras, llegaremos a la conclusión
        de que es bastante mas sencilla y más potente. Sus principales caracteristicas son:
        \n \t - Al estar escritos en Java, son independientes de la plataforma.

        \n \t - Consumen menos recursos porque sólo son cargados la primera vez que se solicitan sus servicios.
        Las siguientes peticiones crearan hilos de ejecución.

        \n \t- Son más rápidos que los programas CGI y que los scripts porque, por un lado se precompilan y, por otro, no se tiene que generar
        un nuevo proceso cada vez que se invocan.
        \n \t- Son seguros y portables debido:
        \n 1) a que se ejecutan bajo la máquina virtual de Java.
        \n 2) al mecanismo de excepciones de Java.
        \n 3) al uso del administrador de seguridad de Java(Java Security Manager).

        \n \t- No requiere soporte para Java en el exploador del cliente, ya que operan en el dominio del servidor y envian los resultados en HTML.
        No obstante, se pueden utilizar otras interfaces de cliente como aplicaciones Java o applets.

          </string>
     <string name="estructura_basica">
    <![CDATA[
         Desde el punto de vista de Java, un servlet no es más que un objeto de alguna de las clases de la API
         Java Servlet que implemente la interfaz Servlet, como son GenericServlet y HttpServlet. Cuando se implementa
         un servicio generico normalmente se utiliza las clases GenericServlet. En cambio, la clase HttpServlet es la idónea
         para servicios específicos HTTP.
         \n \n import java.io.*;
            \n import javax.servlet.*;
            \n import javax.servlet.http.*;

            \n public class SomeServlet extends HttpServlet {
            \n public void doGet(HttpServletRequest request,
            \n HttpServletResponse response)
            \n throws ServletException, IOException {

            \n // Use "request" to read incoming HTTP headers (e.g. cookies)
            \n // and HTML form data (e.g. data the user entered and submitted)

            \n // Use "response" to specify the HTTP response line and headers
            \n // (e.g. specifying the content type, setting cookies).

            \n PrintWriter out = response.getWriter();
            \n// Use "out" to send content to browser
            \n }
            \n }
    ]]>
     </string>
    <string name="ciclo_servlet">
     Todo Servlet debe implementar la interfaz Servlet ya que es esta quien declara los métodos que definen el ciclo de vida del mismo:
        init, service y destroy.
        \n \n - El método init: es invocado por el contenedor Web para iniciar la ejecución del servlet.Este método se ejecuta una sola vez
        y tiene como misión iniciar las variables y recursos necesarios para la ejecución del Servlet. Si la ejecución de este método no se
        realiza con éxito, lanzará la excepción ServletException.
        \n \n - El método service: se llama cada vez que el servidor recibe una petición para el servlet. Este método puede recibir varias
        llamadas simultáneas. Por cada una de ellas, crea un nuevo hilo y examina el tipo de petición HTTP (GET, POST, PUT, DELETE, TRACE,
        OPTIONS o HEAD). Este método tiene dos parámetros de tipos HttpServletRequest y HttpServletResponse, que son pasados al método invocado.
        \n \n - El método destroy: es el último método invocado justo antes de destruir el servlet. Normalmente se utiliza para liberar los
        recursos adquiridos; por ejemplo, borrar ficheros temporales.

          </string>
    <string name="software_necesario">
              Los pasos necesarios para ver el resultado que produce un servlet serían:
             \n -Compilarlo, instalarlo en un servidor e invocarlo para su ejecución desde un explorador.
                Estos pasos requieren proceder de la siguiente manera:
        \n \n - Partiendo de que tenemos instalado el J2SE SDK, instalar el servidor de aplicaciones Tomcat 5.
        \n - Si no se tiene instalado ningun software para desarrollar aplicaciones Java, instale el paquete J2EE SDK.
          </string>
    <string name="tipo_peticion">
       Petición HTTP GET:
        \n \n - Cuando el tipo de petición HTTP es GET, los datos del formulario son enviados al servidor a continuación de la dirección
        URL especificada por el atributo action de form.
        \n - Con este tipo de petición HTTP GET la información del formulario se envía añadiéndola al URL indicado por el action,
        el tamaño de la cadena enviada está limitado, al estar en ASCII es totalmente legible, por lo tanto no es modo seguro, ya que puede
        ser utilizada malintencionalmente como destino de un enlace.

        \n \n Peticion HTTP POST:
        \n \n -Cuando el tipo de peticion HTTP es POST, los datos son enviados al servidor en el cuerpo de la petición. Es el método usual
        de enviar los datos de un formulario.
        \n - La información del formulario se envía después del URL indicado por action en el cuerpo de la petición y el tamaño de la
        información enviada no está limitado.

        \n \n El método correcto para elegir es según lo siguiente:
        \n - Si los datos son pocos y no importa confidencialidad o manipulación, utilizaremos GET.
        \n - Si son largos, privados o importantes utilizaremos POST.

          </string>
    <string name="datos_formulario">
           -  Un servlet lee los datos enviados en la petición realizada por un cliente mediante el método getParameter del objeto
        HttpServletRequest que los métodos doGet y doPost reciben como parámetro.
        \n - El método getParameter devuelve en un objeto de tipo String el valor del parámetro especificado como argumento. Los nombres de
        los parámetros son sensibles a minúsculas y mayúsculas.
        \n - Para leer el conjunto de valores asignados a un parámetro, se utiliza el método getParameterValues que devuelve una matriz de tipo
        String con todos los valores del parámetro especificado como argumento; si este no existe, devuelve null.
        \n - Para obtener los nombres de todos los parámetros, disponemos del método getParameterNames que retorna una enumeración de objetos
        String con los nombres de los parámetros.
        \n - El método hasMoreElements de Enumeration permite iterar mientras haya más elementos en la enumeración.

          </string>
     <string name="objeto_cookie">
        - Una cookie es una pequeña cantidad de información(no más de 4 K) que un servlet puede crear y almacenar en la máquina cliente y,
         posteriormente, consultar a trávees de la API de cookies de los servlets.
         \n \n - Una cookie se compone de dos partes: un nombre y un valor; el nombre la identifica entre todas las demás cookies almacenadas en
         el cliente y el valor es un dato asociado con la cookie.
         \n \n - Un servlet para crear una cookie simplemente tiene que invocar al constructor de la clase Cookie pasando como argumentos
         su nombre y el valor asociado.Ejemplo:
         \n \n Cookie miCookie = new Cookie("nombre-cookie", "valor-asociado");

         \n \n - Para añadir las cabeceras de la respuesta HTTP, ahi que invocar al método addCookie del objeto HttpServletResponse pasando
         como argumento la cookie que se desea añadir:
         \n \n response.addCookie(miCookie);

     </string>
     <string name="contenido_jsp">
      JSP es un acrónimo de Java Server Pages, que traducido vendria a decir algo como Pagínas de Servidor Java.
         \n \n - Es una tecnología orientada a crear pagínas Web con programación en Java.
         \n - Las pagínas JSP están compuestas de código HTML/XML mezclado con etiquetas especiales (órdenes)
         y con trozos de código escritos en Java (scriptlets - secuencias de ordenes).
         \n - Por lo tanto, las JSP podremos escribirlas con nuestro editor HTML/XML habitual.

         </string>
    <string name="title_usuariore">Usuario</string>
    <string name="title_contraseñare">Contraseña</string>
    <string name="title_loginini">Usuario</string>
    <string name="title_password">Contraseña</string>
    <string name="title_mail">Correo</string>
    <string name="grafica">Grafica</string>
    <string name="sonido">Sonido</string>
    <string name="salir">Salir</string>
    <string name="configuracion">Configuración</string>
    <string name="ayuda_y_sugerencias">Ayuda y sugerencias</string>
    <string name="video_introduccion">Video de Introducción</string>
    <string name="acerca_de">Acerca de</string>
    <string name="progreso">Progreso</string>
    <string name="rosa">Rosa</string>
    <string name="morado">Morado</string>
    <string name="blanco">Blanco</string>
    <string name="fondo_predeterminado">Fondo predeterminado</string>
</resources>