<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:menu_alizz_app="http://schemas.android.com/apk/res-auto"
    tools:context="utng.edu.mx.proyectoruby2.ListViewLoginActivity"
    >
    <item
        android:id="@+id/itm_video"
        android:title="@string/video_introduccion"
        menu_alizz_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_desarrolladora"
        android:title="@string/acerca_de"
        menu_alizz_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_ayuda_sugerencias"
        android:title="@string/ayuda_y_sugerencias"
        menu_alizz_app:showAsAction="never"></item>

    <item
        android:id="@+id/itm_configuracion"
        android:title="@string/configuracion"
        menu_alizz_app:showAsAction="never"></item>

    <item
        android:id="@+id/itm_sonido"
        android:title="@string/sonido"
        menu_alizz_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_grafica"
        android:title="@string/grafica"
        menu_alizz_app:showAsAction="never"></item>

    <item
        android:id="@+id/itm_juego"
        android:title="Juego"
        menu_alizz_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_progreso"
        android:title="@string/progreso"
        menu_alizz_app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/itm_evio_correo"
        android:title="Envio del progreso"
        menu_alizz_app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/itm_menu_r2"
        android:title="Menu secundario"
        menu_alizz_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_google_maps"
        android:title="Google Maps"
        menu_alizz_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_salir"
        android:title="@string/salir"
        menu_alizz_app:showAsAction="never"></item>
</menu>