<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:menu_alizz_app="http://schemas.android.com/apk/res-auto"
    tools:context="utng.edu.mx.proyectoruby2.ListViewLoginActivity"
    >
    <item
        android:id="@+id/itm_video"
        android:title="@string/video_introduccion"
        menu_alizz_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_desarrolladora"
        android:title="@string/acerca_de"
        menu_alizz_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_video_promocional"
        android:title="Video Promociónal UTNG"
        menu_alizz_app:showAsAction="never"></item>
    <item
        android:id="@+id/itm_salir"
        android:title="@string/salir"
        menu_alizz_app:showAsAction="never"></item>
  </menu>