<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:paddingLeft="10pt"
        android:paddingRight="10pt"
        android:paddingTop="5pt"
        android:paddingBottom="10pt"
        android:layout_margin="5pt"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_create_login_registro"
            android:textColor="@color/colorPurpleTwo"
            android:textSize="20pt"
            android:gravity="center"
            android:id="@+id/title_login"
            />
        <TextView
            android:id="@+id/txv_create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:textColor="@color/colorBlack"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/title_usuariore"
            android:layout_below="@id/title_login"
            />
        <EditText
            android:id="@+id/edt_create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_create_user"
            />
        <TextView
            android:id="@+id/txv_create_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:textColor="@color/colorBlack"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/title_contraseñare"
            android:layout_below="@id/edt_create_user"
            />
        <EditText
            android:id="@+id/edt_create_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_create_pass"
            android:password="true"
            />

        <TextView
            android:id="@+id/txv_create_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:textColor="@color/colorBlack"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/title_mail"
            android:layout_below="@id/edt_create_pass"
            />
        <EditText
            android:id="@+id/edt_create_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_create_mail"
            />
        <Button
            android:id="@+id/btn_create_login_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_guardar"
            android:layout_below="@id/edt_create_mail"
            />
        <Button
            android:id="@+id/btn_create_login_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_cancelar"
            android:layout_below="@id/edt_create_mail"
            android:layout_toRightOf="@id/btn_create_login_guardar"
            />

    </RelativeLayout>
</ScrollView>